# physics-simulation

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TODOs.txt
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
include/: #object.h#  .#object.h  object.h  shader.h
include/glad/: glad.h
shaders/: fs.glsl  shader.frag  shader.vert  vs.glsl
src/: .#callback.c  collision.c  collision.h  gui.c  gui.h  gui_button.c  gui_button.h  main.c  main.c~  object.c  object.h  physics.c  physics.h  shader.c  shape.c  shape.h  vector.c  vector.h
